--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+server.port=8081
