--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/galerieimage?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -7,3 +7,19 @@ spring.jpa.generate-ddl=true
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 server.port=8081
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
