--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/galerieimage?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/galerieimage
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jackson.serialization.fail-on-empty-beans=false
