--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ file.upload-dir=src/main/resources/image
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
