Loggin url : localhost:8081/api/auth/signin with usernameOrEmail and password Register url : localhost:8081/api/auth/signup with name / username / email / password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost/galerieimage
+spring.datasource.url=jdbc:mysql://localhost/googlenoobs
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
@@ -24,3 +24,11 @@ file.upload-dir=src/main/resources/image
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
+
+## JWT Properties
+app.jwtSecret= CodeSecret
+app.jwtExpirationInMs = 28800000
